# swarm-kit

./: .gitignore  404.html  LICENSE  README.md  SETUP.md  example_supervised.py  example_unsupervised.py  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: index.md
example/: supervised_pipeline.py  unsupervised_chat.py
search/: search_index.json
site/: index.html
site/search/: search_index.json
src/swarm_kit/: __init__.py
src/swarm_kit/cli/: main.py
src/swarm_kit/core/: agent.py  swarm.py  types.py
src/swarm_kit/ui/: server.py
